dev/test_programs/INVALID/group5/trailing_comma_in_print.go
package trailing_comma_in_print

func main() {

  funky2()

  /*error:  trailing comma not allowed, golite 2.9.6*/
  println("jibber jabber","trailing comma",)

}
